[package]
name = "rqueue"
version = "0.1.0"
authors = ["Jeremy Andrews <jeremy@tag1consulting.com>"]
edition = "2018"

[dependencies]
rocket = "^0.4"
serde = "^1.0"
serde_json = "^1.0"
serde_derive = "^1.0"
priority-queue = "^0.6"

[dependencies.rocket_contrib]
version = "^0.4"
default-features = false
features = ["json"]
