[package]
name = "rqueue"
version = "0.1.0"
authors = ["Jeremy Andrews <jeremy@tag1consulting.com>"]
edition = "2018"

[dependencies]
rocket = "^0.4"
serde = "^1.0"
serde_json = "^1.0"
serde_derive = "^1.0"
priority-queue = "^0.6"
rocket_contrib = { default-features = false, features=["json"], version = "^0.4" }
uuid = { features = ["serde", "v4"], version = "^0.7" }
sha2 = "^0.8"
size = "^0.1"
log = "^0.4"
lazy_static = "^1.4.0"
